# qpid

./: .cproject  .gitignore  .project  SVN_INFO  pom.xml
contrib/proton-hawtdispatch/: pom.xml
contrib/proton-jms/: pom.xml
examples/: ProtonConfig.cmake
examples/messenger/c/: CMakeLists.txt  my_recv.c  my_send.c
examples/messenger/java/: pom.xml
proton-c/: CMakeLists.txt  libnetinet
proton-c/bindings/php/: php.ini
proton-c/include/proton/: io.h
proton-c/src/: ProtonConfig.cmake.in  proton.c
proton-c/src/dpdk/: driver.c
proton-c/src/messenger/: messenger.c
proton-j/: pom.xml
tests/: pom.xml
tests/python/proton_tests/: __init__.py
